// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа Test Client 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__item"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__item"
  >
    <table>
      <thead>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="trClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванов
          </td>
          <td
            className="tdBalance"
          >
            200
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидр
          </td>
          <td>
            Сидорович
          </td>
          <td
            className="tdBalance"
          >
            250
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td
            className="tdBalance"
          >
            1
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td
            className="tdBalance"
          >
            -220
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="addClientBtn"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`работа Test Client 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__item"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__item"
  >
    <table>
      <thead>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="trClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванов
          </td>
          <td
            className="tdBalance"
          >
            200
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидр
          </td>
          <td>
            Сидорович
          </td>
          <td
            className="tdBalance"
          >
            250
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td
            className="tdBalance"
          >
            1
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="addClientBtn"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`работа Test Client 3`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__item"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__item"
  >
    <table>
      <thead>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="trClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td
            className="tdBalance"
          >
            -220
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="addClientBtn"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`работа Test Client 4`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__item"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__item"
  >
    <table>
      <thead>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="trClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванов
          </td>
          <td
            className="tdBalance"
          >
            200
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидр
          </td>
          <td>
            Сидорович
          </td>
          <td
            className="tdBalance"
          >
            250
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td
            className="tdBalance"
          >
            1
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="trClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td
            className="tdBalance"
          >
            -220
          </td>
          <td
            className="tdStatus"
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td
            className="tdEditBtn"
          >
            <input
              className="btnEdit"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td
            className="tdDeleteBtn"
          >
            <input
              className="btnDelete"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <input
      className="addClientBtn"
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;
